force-app/main/default/objects/CC_Trazabilidad__c/CC_Trazabilidad__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para el envío y recepción de ficheros TRZ</description>
    <label>Trazabilidad</label>
    <nameField>
        <displayFormat>TRZ-{00000000}</displayFormat>
        <label>Trazabilidad Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trazabilidad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>