force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Accion_Aviso__c.field-meta.xml
<CustomField>
    <fullName>CC_Accion_Aviso__c</fullName>
    <description>Acción sobre el aviso valores posibles
- A --&gt; Alta
- B --&gt; Baja</description>
    <label>Acción Aviso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
            <value>
                <fullName>S</fullName>
                <isActive>false</isActive>
                <label>S</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>