force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Accionabilidad__c.field-meta.xml
<CustomField>
    <fullName>CC_Accionabilidad__c</fullName>
    <description>Indicador para alta de acciones .Valores Posibles:
S: SI realiza acción
N: No realiza acción</description>
    <label>Accionabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>