force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Actualizacion_Paso__c.field-meta.xml
<CustomField>
    <fullName>CC_Actualizacion_Paso__c</fullName>
    <description>Indicador para avanzar/retroceder en el metro. Valores posible:
S: SI realiza acción
N: No realiza acción</description>
    <label>Actualización Paso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>