force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Codigo_Aviso__c.field-meta.xml
<CustomField>
    <fullName>CC_Codigo_Aviso__c</fullName>
    <description>Código del literal de aviso/alerta *</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Aviso</label>
    <length>10</length>
    <type>Text</type>
</CustomField>