force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Codigo_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CC_Codigo_Descripcion__c</fullName>
    <description>Código descripción</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Descripción</label>
    <length>25</length>
    <type>Text</type>
</CustomField>