force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Control_Envio__c.field-meta.xml
<CustomField>
    <fullName>CC_Control_Envio__c</fullName>
    <description>Campo control para el envío y recepción de los ficheros de TRZ</description>
    <label>Control Envío</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pdte. Envio</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Respuesta Recibida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>