force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Estado__c.field-meta.xml
<CustomField>
    <fullName>CC_Estado__c</fullName>
    <description>Código del literal de estado*</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado</label>
    <length>10</length>
    <type>Text</type>
</CustomField>