force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Fecha_Fin_Peticion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Fin_Peticion__c</fullName>
    <description>Para Acción Alta:
Fecha de final prevista petición, si no informada SLA de la petición. Formato AAAAMMDD
Para Acción F
Fecha de final petición, si no informada fecha del dia.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Fin Petición</label>
    <length>8</length>
    <type>Text</type>
</CustomField>