force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Fecha_Inicio_Paso__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Inicio_Paso__c</fullName>
    <description>Fecha inicio del paso formato AAAAMMDDD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Inicio Paso</label>
    <length>8</length>
    <type>Text</type>
</CustomField>