force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Fecha_Inicio_Peticion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Inicio_Peticion__c</fullName>
    <description>Fecha inicio petición, en caso de no venir informada fecha de ejecución. Formato AAAAMMDD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Inicio Petición</label>
    <length>8</length>
    <type>Text</type>
</CustomField>