force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Id_Paso__c.field-meta.xml
<CustomField>
    <fullName>CC_Id_Paso__c</fullName>
    <description>Identificador del paso a actualizar</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Id Paso</label>
    <length>3</length>
    <type>Text</type>
</CustomField>