force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Id_Paso_Replanificacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Id_Paso_Replanificacion__c</fullName>
    <description>Identificador del paso a actualizar de replanificación</description>
    <label>Id Paso Replanificación</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>