force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Id_Peticion__c.field-meta.xml
<CustomField>
    <fullName>CC_Id_Peticion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identificador de la instancia</description>
    <label>Id Petición</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Trazabilidad</relationshipLabel>
    <relationshipName>Trazabilidad</relationshipName>
    <type>Lookup</type>
</CustomField>