force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Indicador_Modificar_Estado_General__c.field-meta.xml
<CustomField>
    <fullName>CC_Indicador_Modificar_Estado_General__c</fullName>
    <description>Indicador de si se ha de modificar el estadoGeneral
Valores:
S - Si
N - No</description>
    <label>Indicador Modificar Estado General</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>