force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Nueva_Instancia__c.field-meta.xml
<CustomField>
    <fullName>CC_Nueva_Instancia__c</fullName>
    <description>Indicador nueva instancia. 
Valores posibles: 
-A: Alta
-B: Baja 
-F: Finalizar instancia sin llegar al final del metro
-M: Únicamente modificar el estado de la instancia
-N: No realiza acción</description>
    <label>Nueva Instancia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>