force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Oficina__c</fullName>
    <description>Número de la oficina a la que hace referencia la petición</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Oficina</label>
    <length>5</length>
    <type>Text</type>
</CustomField>