force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Orden__c.field-meta.xml
<CustomField>
    <fullName>CC_Orden__c</fullName>
    <description>Orden de creación de registros</description>
    <label>Orden</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>