force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_PEA__c.field-meta.xml
<CustomField>
    <fullName>CC_PEA__c</fullName>
    <description>Pea que dirige a la acción</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PEA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>