force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Resetear_Paso__c.field-meta.xml
<CustomField>
    <fullName>CC_Resetear_Paso__c</fullName>
    <description>en caso que se esté volviendo hacia atrás en el metro. Valores posibles:
- S: se está volviendo hacia atrás en el metro, por tanto se inicializa las fechas de los pasos posteriores
- N: se esta avanzando en el metro</description>
    <label>Resetear Paso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>