force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Tipo_Codigo_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Codigo_Descripcion__c</fullName>
    <description>Tipo de código de descripción, indica que tipo de codigo es el del campo codiDesc
Valores:
	- L -&gt; código de litmid
	- P -&gt; código propio de la aplicación</description>
    <label>Tipo Código Descripción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>