force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Variable_Estado__c.field-meta.xml
<CustomField>
    <fullName>CC_Variable_Estado__c</fullName>
    <description>Texto variable, sustituible en el literal del estado por el código @VAR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Variable Estado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>