force-app/main/default/objects/CC_Trazabilidad__c/fields/CC_Vision_Aviso__c.field-meta.xml
<CustomField>
    <fullName>CC_Vision_Aviso__c</fullName>
    <description>Visión del aviso
O - Oficina
C - Cliente
T - Todos (por defecto)</description>
    <label>Visión Aviso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>