force-app/main/default/objects/CC_Trazabilidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CC_Id_Peticion__c</columns>
    <columns>CC_Tipo_de_Registro__c</columns>
    <columns>CC_Estado__c</columns>
    <columns>CC_Control_Envio__c</columns>
    <columns>CC_Id_Proceso__c</columns>
    <columns>CC_Orden__c</columns>
    <columns>CC_Nueva_Instancia__c</columns>
    <columns>CC_Actualizacion_Paso__c</columns>
    <columns>CC_Gestion_Aviso__c</columns>
    <columns>CC_Numperso__c</columns>
    <columns>CC_Oficina__c</columns>
    <columns>CC_Fecha_Inicio_Peticion__c</columns>
    <columns>CC_Fecha_Fin_Peticion__c</columns>
    <columns>CC_Tipo_Aviso__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>